--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.6"
   },
