--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash.debounce": "^4.0.8",
     "rc-pagination": "^4.3.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.4",
@@ -29,7 +30,8 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "sass": "^1.77.6",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
