--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,24 +30,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
+
       - name: Install dependencies
         run: npm install
+
+      - name: Set environment variables
+        run: echo "VITE_API_CAPTCHA=${{ secrets.VITE_API_CAPTCHA }}" >> .env
+
       - name: Build
-        run: |
-          echo "VITE_API_CAPTCHA=${{ secrets.VITE_API_CAPTCHA }}" >> .env
-          npm run build
+        run: npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
-          # Upload dist repository
+          name: github-pages
           path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
