--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.35.1",
     "axios": "^1.6.8",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "lodash.debounce": "^4.0.8",
     "rc-pagination": "^4.3.0",
